web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/components/Answer/Answer.module.css
.answerContainer {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 1rem 1rem 2rem 4.5rem;
    gap: 0.25rem;
    background: #FFFFFF;
    border: 2px solid hsl(213, 66%, 45%);
    border-radius: 2rem;
    position: relative;
    width: 100%;
    height: 100%;
    transition: all 200ms ease-in-out;
}

@media screen and (min-width:800px) {
    .answerContainer {
        padding: 1rem 1rem 2rem 4.5rem;
    }
}

.chatMessageAIMessageAvatar {
    position: absolute;
    top: 1rem;
    left: 1rem;
    width: 2.5rem;
    height: 2.5rem;
}

.answerText {
    font-family: 'Mallory', sans-serif;
    font-style: normal;
    font-weight: 400;
    font-size: 1rem;
    line-height: 1.3;
    color: #222;
    flex: none;
    order: 1;
    align-self: stretch;
    flex-grow: 0;
    white-space: normal;
    word-wrap: break-word;
    max-width: 800px;
}

@media screen and (min-width:800px) {
    .answerText {
        font-size: 1.1rem;
    }
}

.answerText > *:first-child {
    margin-top: 0;
}

.answerText > *:last-child {
    margin-bottom: 0;
}

.answerText ol {
    padding-left: 1.5rem;
}

.answerReferences {
    gap: 0.5rem;
}

.answerHeaderLabel {
    font-style: normal;
    font-size: 1rem;
}

.answerHeader {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    width: 100%;
    height: auto;
    box-sizing: border-box;
    border-bottom: 1px solid hsl(213, 66%, 45%);
    padding-bottom: 2rem;
    margin-bottom: 2rem;
    gap:0.5rem;
}

.answerFooter {
    display: flex;
    flex-flow: row nowrap;
    width: 100%;
    height: auto;
    box-sizing: border-box;
    justify-content: space-between;
    border-top: 1px solid hsl(213, 66%, 45%);
    padding-top: 0.5rem;
    margin-top: 0.5rem;
}

.citationContainer {
    font-style: normal;
    font-family: 'Mallory', sans-serif;
    font-weight: 400;
    font-size: 0.9rem;
    line-height: 1;
    background: white;
    color: #115EA3;
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 0.5rem 1rem;
    gap: 0.25rem;
    border: 1px solid hsl(213, 66%, 45%);
}

.citationList {
    padding: 0;
    margin: .5rem 0 0;
    display: flex;
    flex-flow: column nowrap;
    gap: .5rem;
}

@media screen and (min-width:800px) {
    .citationList {
        flex-flow: row wrap;
    } 
}

.citationList li {
    list-style: none;
    margin: 0;
    padding: 0;
}

.citationContainer:hover {
    text-decoration: underline;
    cursor: pointer;
    background-color: hsl(213, 66%, 98%);
}

.citation {
    box-sizing: border-box;
    display: inline-flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 0px;
    width: 1rem;
    height: 1rem;
    border: 1px solid #E0E0E0;
    flex: none;
    flex-grow: 0;
    z-index: 0;
    font-style: normal;
    font-weight: 400;
    font-size: 0.85rem;
    line-height: 1;
    text-align: center;
    color: hsl(213, 66%, 45%);
    cursor: pointer;
}

.citation:hover {
    text-decoration: underline;
    cursor: pointer;
}

.accordionIcon {
    display: inline-flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 0px;
    margin-top: 4px;
    color: #616161;
    font-size: 1rem;
}

.accordionIcon:hover {
    cursor:pointer;
}

.accordionTitle {
    font-family: 'Mallory', sans-serif;
    margin:0;
    font-style: normal;
    font-weight: 400;
    font-size: 1rem;
    line-height: 1;
    display: flex;
    align-items: center;
    color: #616161;
}

.accordionTitle:hover {
    cursor:pointer;
}

.clickableSup {
    box-sizing: border-box;
    display: inline-flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 0px;
    width: 14px;
    height: 14px;
    border: 1px solid #E0E0E0;
    flex: none;
    order: 2;
    flex-grow: 0;
    z-index: 2;
    font-style: normal;
    font-weight: 600;
    font-size: 1rem;
    line-height: 1;
    text-align: center;
    color: #424242;
    cursor: pointer;
}

.clickableSup:hover {
    text-decoration: underline;
    cursor: pointer;
}

sup {
    font-size: 1rem;
    line-height: 1;
}

